--- a/components/java-springboot-xmzhcpqr/overlays/development/deployment-patch.yaml
+++ b/components/java-springboot-xmzhcpqr/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: java-springboot-xmzhcpqr
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/java-springboot-xmzhcpqr:f631e26e68ce75a0bb4a39180248e526e94fd2c0@sha256:b981190be9f94335912618a4916724ed89002f78f8710e714020755d29ffa495
+          name: container-image
